# Physical_simulation

./: .travis.yml  CMakeLists.txt  README.md  README.txt
source/: main.cpp
source/common/: ball_id.h  ball_info.h  field_sizes.h
source/domain/: ball.cpp  ball.h  ball_id.h  model.cpp  model.h  physics.cpp  physics.h
source/presenter/: i_presenter.h  main_presenter.cpp  main_presenter.h
source/utils/: common_utils.h  constants.h  id.h  non_copyable.h  vector2f.cpp  vector2f.h  vector2i.cpp  vector2i.h
source/view/: ball.h  main_widow.cpp  main_widow.h  render_area.cpp  render_area.h
test/: main.cpp  test_extesions.h
test/domain/: ball_test.cpp  model_test.cpp  physics_test.cpp
test/utils/: vector2f_test.cpp
